# Learning-OpenCV-3_examples

./: CMakeLists.txt  Dockerfile  Exercises_11-1-2-5-6-7.cpp  Exercises_13_1-2-11.cpp  Exercises_13_9.cpp  Exercises_5.cpp  Exercises_7.cpp  Exercises_7_a_b_c.cpp  Exercises_8_1.cpp  Exercises_9_1-2-10-11-12-15-16.cpp  Exercises_9_4.cpp  Exercises_9_5.cpp  README.md  example_02-01.cpp  example_02-02.cpp  example_02-03.cpp  example_02-04.cpp  example_02-05.cpp  example_02-06.cpp  example_02-07.cpp  example_02-08.cpp  example_02-09.cpp  example_02-10.cpp  example_02-11.cpp  example_04-01.cpp  example_04-02.cpp  example_04-03.cpp  example_04-04.cpp  example_05-01.cpp  example_07-01.cpp  example_08-01.cpp  example_08-02.cpp  example_08-03.cpp  example_09-01.cpp  example_09-02.cpp  example_09-03.cpp  example_09-04.cpp  example_09-05.cpp  example_09-06.cpp  example_09-07.cpp  (+42 more)
birdseye/: intrinsics.xml
mushroom/: Index  citation  expanded.Z
stereoData/: example_19-03_list.txt
